# unembedx

./: Cargo.toml  README.md
src/: cfb.rs  lib.rs  main.rs  utils.rs
testdata/: dummy.pptx
tests/: extract_pdf.rs
