[package]
name = "unembedx"
version = "0.1.0"
authors = ["David Hedberg <david.hedberg@gmail.com>"]
edition = "2018"

[features]
default = ["filetypes"]
filetypes = ["magic", "new_mime_guess"]

[dependencies]
anyhow = "1.0"
cfb = "0.7"
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.9"
lazy_static = "1.4"
log = "0.4"
magic = { version = "0.13", optional = true }
new_mime_guess = { version = "4.0", optional = true }
tempfile = "3.3"
zip = "0.6"
