[package]
name = "unembedx"
version = "0.1.0"
authors = ["David Hedberg <david.hedberg@gmail.com>"]
edition = "2021"

[features]
default = ["filetypes"]
filetypes = ["magic", "new_mime_guess"]

[dependencies]
anyhow = "1.0"
cfb = "0.9"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
magic = { version = "0.16", optional = true }
new_mime_guess = { version = "4.0", optional = true }
tempfile = "3.9"
zip = "0.6"
